force-app/main/default/objects/Campaign/fields/Ammontare_Disponibile__c.field-meta.xml
<CustomField>
    <fullName>Ammontare_Disponibile__c</fullName>
    <formula>Totale_Ammontare_Donazioni__c -  Totale_Ammontare_Fatture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ammontare Disponibile</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>