force-app/main/default/objects/Campaign/fields/Donatore__c.field-meta.xml
<CustomField>
    <fullName>Donatore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donatore</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>