force-app/main/default/objects/Campaign/fields/Totale_Ammontare_Donazioni__c.field-meta.xml
<CustomField>
    <fullName>Totale_Ammontare_Donazioni__c</fullName>
    <label>Totale Ammontare Donazioni</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>