force-app/main/default/objects/Campaign/fields/Totale_Minuti_di_Visite__c.field-meta.xml
<CustomField>
    <fullName>Totale_Minuti_di_Visite__c</fullName>
    <label>Totale Minuti di Visite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>