force-app/main/default/objects/Campaign/fields/Totale_Numero_Donazioni__c.field-meta.xml
<CustomField>
    <fullName>Totale_Numero_Donazioni__c</fullName>
    <label>Totale Numero Donazioni</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>