force-app/main/default/objects/Campaign/recordTypes/Campagna_Donazione.recordType-meta.xml
<RecordType>
    <fullName>Campagna_Donazione</fullName>
    <active>true</active>
    <label>Campagna Donazione</label>
</RecordType>