force-app/main/default/objects/Campaign/listViews/all_campaigns.listView-meta.xml
<ListView>
    <fullName>all_campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Ammontare_Disponibile__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Donatore__c</columns>
    <columns>Programma__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tutte le Campagne</label>
</ListView>